[package]
name = "rouge"
version = "0.1.0"
authors = ["Bartosz Nowak <sztosz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.6.0"
specs = "0.15.1"
specs-derive = "0.4.0"
shred = "0.9.0"

[features]
default = ["shred/nightly"]