[package]
name = "rouge"
version = "0.1.0"
authors = ["Bartosz Nowak <sztosz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.6.2", features = ["serde"] }
specs = { version = "0.15.1", features = ["serde"] }
specs-derive = "0.4.0"
shred = "0.9.0"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "^1.0.44"
ron = "0.5.1"

[features]
default = ["shred/nightly"]